--- a/index.html
+++ b/index.html
@@ -4,23 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peer Into The Eye</title>
-    <meta name="description" content="An interactive visual experience - explore the geometric orb" />
-    <meta name="author" content="Lovable" />
-    
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='none' stroke='%23ff0000' stroke-width='3'/><circle cx='50' cy='50' r='30' fill='none' stroke='%23ff3333' stroke-width='2'/><circle cx='50' cy='50' r='15' fill='%23ff0000'/></svg>" />
-
-    <meta property="og:title" content="Peer Into The Eye" />
-    <meta property="og:description" content="An interactive visual experience" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
-
   <body>
     <div id="root"></div>
+
+    <!-- ✅ DO NOT CHANGE THIS -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
